@@ -3,13 +3,15 @@ AUX calculate-templates-2.2.24-r2.patch 29270 RMD160 3a19fd9766d9509208ae1d52b69
 AUX calculate-templates-2.2.24-r3.patch 31113 RMD160 7510e5ce024506f7ee86ca3f38d48f7a2d5388ab SHA1 bee1057dd2766f2b4c6233c37cf835c1bda66ee6 SHA256 2963cff2bbb2e0f16c8149dab18f765713dd46d389e3e47ff281be5f57f6c0ab
 AUX calculate-templates-2.2.24-r4.patch 37017 RMD160 83231a453ec1e996a89138957dcae88dbf5e54f0 SHA1 93f55fbd3e3f608422c0382435efefee41f7c53f SHA256 2246d7a5f5831dc04c1a8faa098178a1f278c4e6e833e9fdfad82e62c0f376a1
 AUX calculate-templates-2.2.24-r5.patch 43300 RMD160 56c136c99d3050c7b32b821d119be7955bd38efa SHA1 2a4b9fc985b612ba2be1976fe4701bc51625b2b6 SHA256 780649b09dfd409d94ea3a50ceb64dbba8e0d4af2cdd85d77c24b310eeb7a296
+DIST calculate-templates-2.2.24-r6.tar.bz2 247568 RMD160 df6d8b2cb09c292668528b08382afd563c2e81f7 SHA1 df12ef7a680e76dc13ab2666df8ef84ff4504944 SHA256 b339b318e7dcb5ab045278f0b736fdddd1d5cd53e60c017e73324b7cb23d4d51
 DIST calculate-templates-2.2.24.tar.bz2 247373 RMD160 eccaa0fb8a02ce6114b9fa24367e5d3ba38b80a4 SHA1 556aa83ce71e2202d9ca66fb6c8b1bc0dfbff44b SHA256 26a3c18c2e18167d4099412e69001cd1f8fd5c2f7165dcd3f24b80701f5d2751
 EBUILD calculate-templates-2.2.24-r1.ebuild 718 RMD160 99d37d439cc2018902fd036acc35d5676a413074 SHA1 d575a81a56ffb19d3f7337d3f20f43da3e3e2c87 SHA256 f765421192ffb1ff987917e4578dd6fa532101841125b43447d69c12eeffb59f
 EBUILD calculate-templates-2.2.24-r2.ebuild 756 RMD160 adf29c1539951953719d5b83be14f590e437fed6 SHA1 de95021a634954babe1fa0ca35181bf1886381d3 SHA256 78b9eec76d49c5328f0d749167c70ca59c8ce1c1756d59b4dbfdfd8c19b78e43
 EBUILD calculate-templates-2.2.24-r3.ebuild 780 RMD160 17d989eeb58626ec9cd4ab15317ea4a71684066b SHA1 be7388e7eb46fa0d0c9470c8142b984f0006048d SHA256 75f351bd28a216d4442be24df2c8a03409c744b0f4ae867c40c93b336da78541
 EBUILD calculate-templates-2.2.24-r4.ebuild 800 RMD160 da6643dd8795bede79d57fb5b3c577fcb5a784ac SHA1 7d1a022a3bb3133ca79e72c9e940be177fc9e43f SHA256 f00a3e9bac3ec8bf025e44a8f39f79cbe62877bea642fa645de95b7105e829cc
 EBUILD calculate-templates-2.2.24-r5.ebuild 800 RMD160 76ea8a54bbfabe63e76844eb430c904944d20596 SHA1 750467abc158882c83a16801dc24cbf06f6defc3 SHA256 2987075004edb08ad846fba682fc1b750dd653c11ba604211ccf5b9c98c357d2
+EBUILD calculate-templates-2.2.24-r6.ebuild 585 RMD160 c6b7644ff26907fa64ade9337fdc96b9beee809c SHA1 6f46f29b7443da2a3818daf19e6a889116a0fd6b SHA256 a35a2cbd039aa0676303c5df2ba2b2015ba79b4e8af40ac3abc26f6560345bce
 EBUILD calculate-templates-2.2.24.ebuild 582 RMD160 77c74362587b218b15ad9651903420e3ec01962f SHA1 ea9150e2e0476a8d5236f0388e3cdfd1a268bdf7 SHA256 4d0808a6993e403745b7820596d99cb8d2a206b4938f8ea916c1f305c61d2687
 EBUILD calculate-templates-2.2.9999.ebuild 574 RMD160 0898335742573bd029339ae8682b1676cdc6c91c SHA1 d05a1b5986858e35e7f0618a7660ad8e43bbca43 SHA256 c201dbf1dc238f309993c20148918661f057fe406fdb87ed4ef6c3bca0261427
-MISC ChangeLog 34157 RMD160 9bd8881978aaab3dd8d50ceca291d3d2f7040edf SHA1 a5e408dc2c83c08d7e050d493784ef0a716a70e0 SHA256 ff465f0f0058220878f631cc3c36524081735ebddff53d87f0e1ca45d4b6896b
+MISC ChangeLog 34330 RMD160 1e3066cb9accc7425ca4c8c22d0066586125d1b3 SHA1 6a87d41fbe3fd73e9aa575ada35c924497dab1ff SHA256 7c8fa474a3df8a0b1f4d4ed43914be5a1d78c3db5ad1abb2d821db0dad8f6ff0
 MISC metadata.xml 338 RMD160 4a1a51881bdf09b961217d2056114ca4ccb8b4d2 SHA1 5fcb2724427f9ac5dda07abb5c829c24e6db9ae6 SHA256 175d9ae86b71b291a519414e816b05290d0e4be74726cc8d5449a500c51a3b2d
