@@ -5,6 +5,7 @@ EBUILD calculate-utilities-2.2.24-r4.ebuild 873 RMD160 70f067baed3cd831660617cc2
 EBUILD calculate-utilities-2.2.24-r5.ebuild 885 RMD160 086c3f072e81e739dbe46d2345d7c68d8e115265 SHA1 9d7d6694849fd371e1865a294bd8223d0a9cd99d SHA256 5664f8a0f64a4b7bb75f4746314519b13dc55f112bd04f6a82126ec15db454b5
 EBUILD calculate-utilities-2.2.24-r6.ebuild 885 RMD160 1b2a1004d9dfe34d53dbee65895390549be74c73 SHA1 9f2efc1e5edcd063cd6f469eaf827fa779c6bcc0 SHA256 2143bf1b761323d31b6e62ee5dadf162d1fd3506405cfbfd85e8c10b870747dc
 EBUILD calculate-utilities-2.2.24-r7.ebuild 885 RMD160 ed397e97011f5250d5ceba8a2cff68ac1c698868 SHA1 d1d5f02cf46df4960c65c4541581201854dc6bfc SHA256 5083fc75f3080dc29dd4e3fcc5428ff6dc5768085b301d2145423133195bbd50
+EBUILD calculate-utilities-2.2.24-r8.ebuild 885 RMD160 fc01b867dd5b79294cdf0581954be124f53a05f5 SHA1 0a16405f40a5122326ec4de2f83dafd1c12a8cf9 SHA256 218d678cf21b5ee200dcfa67b68ca9f7dafc650e8dd13ffc63c20cb8aa07b10e
 EBUILD calculate-utilities-2.2.24.ebuild 861 RMD160 71a8eac35eade9be90df9cacbb5b4d9ba07d3664 SHA1 258da46af67a0e0995074a9c7f01b33234711ca9 SHA256 f1a33869f243365632a9af11ab9ed2538a6b2c183dd9ddbf28d48ad564df3d54
 EBUILD calculate-utilities-2.2.9999.ebuild 840 RMD160 0c7324a9ed480118ac19f62b162c9ee62c25f964 SHA1 7dadab1430ed147334ed7e9b4fcc86dc99e25d56 SHA256 f3ee28f9f765e7302c83eb4a15a09bdf066f09e6b40e34f6d52157a946df5e66
-MISC ChangeLog 27442 RMD160 74d97439e638ff264c7a22337faf1bccec80b1b0 SHA1 43b455854f23e86ec51e8fb974a97c5269defa7f SHA256 bfc960c7914e2fb46b83d703642305c32d520d39e8b1b0905e3bfe8295325d46
+MISC ChangeLog 27613 RMD160 b8208daba4b19424a864adfb907ddc7819e0ba7e SHA1 d81b9ea22934dabe7ce4aabc7335c76eea9afcd4 SHA256 e88762fb5f31bf4c8cfbe8f7e89a5b73ddf6c79db073d3afc5ebb0e48b0318fa
