@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-utilities-2.2.24-r8 (29 Sep 2011)
+
+  29 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-utilities-2.2.24-r8.ebuild:
+  Update for templates
+
 *calculate-utilities-2.2.24-r7 (29 Sep 2011)
 
   29 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
