@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-templates-2.2.24-r6 (29 Sep 2011)
+
+  29 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-templates-2.2.24-r6.ebuild:
+  Fix previous templates
+
 *calculate-templates-2.2.24-r5 (29 Sep 2011)
 
   29 Sep 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
